# a-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing-1.0.0-py3-none-any.whl  a_maze_ing.py  config.txt  generator.py  maze_output.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  simple tester.py
MazeGen/: generator.py  solver.py
mazegen/: Doc Persian.docx  Doc Persian.pages  README.md  carver_dfs.py  generator.py  mask_42.py
mazegen.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  a_maze_ing.py  maze_app.py
src/MazeGen/: __init__.py  constants.py
src/a_maze_ing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
