[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Um gerador e solucionador de labirintos usando MiniLibX"
authors = [
    { name = "sasheri & vebastos" }
]
requires-python = ">=3.10"
dependencies = []