[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generator and solver package for the 42 A-Maze-ing project"
authors = [
    { name = "sasheri" },
    { name = "vebastos" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["MazeGen"]
include-package-data = true
